Rewriting the mod